[package]
name = "mgrep"
version = "1.0.0"
edition = "2021"
description = "A simple command line tool for searching for a string in a file"
authors = ["UyCode"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UyCode/mgrep.git"
readme = "README.md"
documentation = "https://github.com/UyCode/mgrep/blob/main/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
